rpi5/calibre/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre
  labels:
    app: calibre
spec:
  replicas: 0
  selector:
    matchLabels:
      app: calibre
  template:
    metadata:
      name: calibre
      labels:
        app: calibre
    spec:
      containers:
        - name: calibre
          image: linuxserver/calibre:8.10.0@sha256:13ae6cee2d8b26df5f4585dddcf46a1da6b90169e4231b2b33b3960084e3c09f
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /config
              name: data
      restartPolicy: Always
      volumes:
        - name: data
          hostPath:
            path: /data
