rpi5/calibre/server/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: calibre
  labels:
    app: calibre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibre
  template:
    metadata:
      name: calibre
      annotations:
        linkerd.io/inject: "enabled"
      labels:
        app: calibre
    spec:
      containers:
        - name: calibre
          image: linuxserver/calibre:9.15.0@sha256:c97f86a5acc3372d5e25e75b4c98d1bffa64e70d4c413554beb1e554ae109187
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
              name: http
            - containerPort: 8081
              protocol: TCP
              name: content
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /config
              name: config
      securityContext:
        fsGroup: 3002
      restartPolicy: Always
      volumes:
        - name: data
          hostPath:
            path: /data
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
