rpi5/calibre/server/oauth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth-proxy
  labels:
    app: oauth-proxy
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth-proxy
  template:
    metadata:
      name: oauth-proxy
      annotations:
        linkerd.io/inject: "enabled"
      labels:
        app: oauth-proxy
    spec:
      containers:
        - name: oauth-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.15.5@sha256:8498b0d0ef0a7b29686414000a08aee467f02d0299c9ed1e006a8f33fc017916
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4180
              protocol: TCP
              name: http
            - containerPort: 4443
              protocol: TCP
              name: https
          livenessProbe:
            httpGet:
              port: https
              path: /ping
              scheme: HTTPS
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              port: https
              path: /ready
              scheme: HTTPS
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - mountPath: /etc/ssl/certs/ca-certificates.crt
              name: ca
              subPath: ca.crt
            - mountPath: /certs
              name: tls
          securityContext:
            runAsGroup: 2000
      restartPolicy: Always
      volumes:
        - name: ca
          configMap:
            name: anshulg-ca
        - name: tls
          csi:
            driver: csi.cert-manager.io
            readOnly: true
            volumeAttributes:
              csi.cert-manager.io/issuer-kind: ClusterIssuer
              csi.cert-manager.io/issuer-name: rpi5-ca
              csi.cert-manager.io/dns-names: "calibre-auth.${POD_NAMESPACE}.svc.cluster.local,calibre-auth.${POD_NAMESPACE},calibre-auth"
              csi.cert-manager.io/fs-group: "2000"
              csi.cert-manager.io/duration: 720h0m0s
---
apiVersion: v1
kind: Service
metadata:
  name: calibre-auth
spec:
  selector:
    app: oauth-proxy
  ports:
    - protocol: TCP
      port: 443
      targetPort: https
  type: ClusterIP
