rpi5/calibre/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre
spec:
  selector:
    app: calibre
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
