rpi5/calibre/server/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: calibre
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`calibre.local`) || Host(`calibre.internal`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: calibre-auth
          port: 443
          serversTransport: calibre
  tls:
    secretName: calibre-cert-tls
    domains:
      - main: calibre.local
        sans:
          - calibre.internal
